--- a/inventory.yml
+++ b/inventory.yml
@@ -9,3 +9,10 @@ ansible_ssh_private_key_file=~/ansible/sshkey.pem
 
 [local]
 127.0.0.1
+
+
+
+# Another option
+
+[dev]
+3.91.60.111 ansible_user=ubuntu ansible_ssh_private_key_file=/home/ubuntu/ansible/ansible.pem
