--- a/inventory.yml
+++ b/inventory.yml
@@ -6,6 +6,8 @@
 ansible_user=ubuntu
 ansible_ssh_pass=password
 ansible_ssh_private_key_file=~/ansible/sshkey.pem
+ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+ansible_ssh_extra_args='-o StrictHostKeyChecking=no'
 
 [local]
 127.0.0.1
