--- a/roles/handlers/main.yml
+++ b/roles/handlers/main.yml
@@ -2,6 +2,6 @@
 # handlers file for nginx
 - name: restart nginx
   service:
-      name: nginx
-      state: restarted
-      enabled: yes
+      name: "{{nginx_service}}"
+      state: "{{nginx_state}}"
+      enabled: "{{nginx_enabled}}"
